apps/vaultwarden/ingresses/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-cloudflare-rewrite@kubernetescrd
  name: vaultwarden-ingress
  labels:
    name: vaultwarden-ingress

spec:
  ingressClassName: traefik
  rules:
    - host: INGRESS_HOST_PLACEHOLDER
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vaultwarden-service
                port:
                  number: 80
